# ELTE-FAIL

./: .gitignore  README.md
ELTE-FAIL/: CMakeLists.txt  Doxyfile_elte-fail  ELTE-FAIL-as-client.bat  ELTE-FAIL.vcxproj  ELTE-FAIL.vcxproj.filters  basic_cfg.cfg
ELTE-FAIL/gamedata/language/: english.txt
ELTE-FAIL/gamedata/profiles/: mentés.cfg
ELTE-FAIL/gamedata/profiles/proof88/: proof88.cfg
ELTE-FAIL/src/: BaseConsts.h  CustomPGE.cpp  CustomPGE.h  ELTE-FAIL.cpp  ElteFailPacket.h
